--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Android Build CI
+name: Windows Build CI
 
 # Controls when the workflow will run
 on: [push, pull_request, workflow_dispatch]
@@ -48,6 +48,7 @@ jobs:
           haxelib git extension-webm https://github.com/jigsaw-4277821/extension-webm --quiet
           haxelib git linc_luajit https://github.com/Daninnocent/linc_luajit.git --quiet
           haxelib install actuate 
+          haxelib install newgrounds
           haxelib list
           
       - name: Build Log
