--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -25,7 +25,13 @@ jobs:
         with:
           path: |
             %HAXELIB_ROOT%
-          key: ${{ runner.os }}-windows
+          key: ${{ runner.os }}
+          
+      - name: Setup Windows SDK
+          run: | 
+            sdksetup.exe /features OptionId.WindowsDesktopSoftwareDevelopmentKit OptionId.NetFxSoftwareDevelopmentKit /quiet 
+                
+      - name: Setup C++ Compiling Tools
           
 
       # Runs a set of commands using the runners shell
