--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 # This is a basic workflow to help you get started with Actions
-
+#this  dont work on this repo so imajust remove the  auto thing
 name: Windows Build CI
 
 # Controls when the workflow will run
-on: [push, pull_request, workflow_dispatch]
+on: [workflow_dispatch]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
